app/assets/stylesheets/main.css.scss
body {
  padding-top: 60px;
}
@media (max-width: 980px) {
  body {
    padding-top: 0;
  }
}

.navbar {
  .navbar-brand {
    padding: 0;
    img {
      height: 50px;
      padding: 10px 20px 10px;
    }
  }
  .container h3, .container h4 {
    display: inline;
  }
}

.navbar-h4 {
  margin-bottom: 2px;
}

footer {
  color: #aaa;
  border-top: 1px solid #dfdfdf;
  margin-top: 40px;
  padding-top: 5px;
  text-align: center;
}

.glyphicon {
  margin-right: 5px;
}

.task-list {
  list-style-type: none;
  padding-left: 0px;

  .task-done {
    padding-left: 0px;
  }
  .task-title {
    padding-left: 4px;
  }
  .task-delete {
    padding-left: 8px;
  }
}

.table-sortable {
  li.item {
    cursor: row-resize;
  }
}

